fix: remove extra paddings and margins on ul

--- a/css/reset.css
+++ b/css/reset.css
@@ -16,6 +16,7 @@ h6,
 p,
 figure,
 picture {
+    padding: 0;
     margin: 0;
 }
 
